fix weird wrapping thing on filter lists

--- a/public/css/_filter.sass
+++ b/public/css/_filter.sass
@@ -45,10 +45,12 @@
       // column-gap: 15px
       column-width: 200px
       height: 100%
+      white-space: nowrap
       
       li
-        width: 200px
+        // width: 200px
         +clearfix()
+        white-space: normal
         
         label
           width: calc(100% - 22px)
